# ICHub

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  install.sh  install_local.sh  install_prod.sh  package-lock.json  package.json  rollup.config.js  test.sh  webpack.config.js
src/: install_prod.sh
src/ICHub/: Cargo.toml  ICHub.did
src/ICHub/src/: lib.rs
src/ICHub_assets/public/: index.html  smui.css
src/ICHub_assets/src/: App.svelte  Dashboard.svelte  HubPanel.svelte  index.html  index.js
src/ICHub_assets/src/components/: NewFollowCard.svelte
src/ICHub_fe/: package-lock.json  package.json
src/ICHub_fe/public/: index.html
src/ICHub_fe/src/: App.svelte
src/declarations/ICHub/: ICHub.did  ICHub.did.d.ts  ICHub.did.js  index.js
src/declarations/ICHub_fe/: index.js
src/declarations/devhub/: devhub.did.d.ts  devhub.did.js  index.js
src/declarations/hub/: hub.did.d.ts  hub.did.js  hub.wasm
src/declarations/hub_assets/: index.js
src/declarations/ic_management/: ic_management.did.d.ts  index.js
src/declarations/microblog/: index.js  microblog.did.d.ts  microblog.did.js  microblog.old.most
src/devhub/: Cargo.toml  devhub.did
src/devhub/src/: lib.rs
src/hub/: Cargo.toml  hub.did
src/hub/src/: lib.rs  management.rs
src/hub_assets/assets/: main.css
src/hub_assets/public/: index.html  smui-dark.css  smui.css
src/hub_assets/src/: App.svelte  Dashboard.svelte  DevHubPanel.svelte  app.less  index.html  index.js  index.less
src/microblog/: main.mo  microblog.did
src/utility/: Cargo.toml
src/utility/src/: lib.rs
(+82 files in other folders)
