[package]
name = "devhub"
version = "0.1.0"
edition = "2018"

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[build-dependencies]
candid = "0.7.14"

[dependencies]
candid = "0.7.14"
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
ic-types = "0.2.1"
serde = "1.0.126"
serde_derive = "1.0.126"

[dev-dependencies]
tempfile = "3.2.0"